<resources>
    <string name="app_name">ProyectoMusicStore_Angely_Jensy</string>

    <!--Jensy Login-->
    <string name="textviewLoginUsuario">Usuario</string>
    <string name="textviewLoginPassword">Contraseña</string>
    <string name="checkLoginRecordar">Recordarme</string>
    <string name="txtviewOlvidaPassword">¿Olvida su contraseña?</string>
    <string name="btnLoginEntrar">Entrar</string>
    <string name="btnLoginRegistrarse">Registrarse</string>
    <string name="login">¡INICIA SESIÓN!</string>
    <string name="registrarse">¡REGÍSTRATE!</string>

    <!--Jensy Login-->
    <string name="txtviewRegistrarNombres">Nombres</string>
    <string name="txtviewRegistrarApellidos">Apellidos</string>
    <string name="txtviewRegistrarCorreo">Correo Electrónico</string>
    <string name="txtviewRegistrarUsuario">Usuario</string>
    <string name="txtviewRegistrarPassword">Contraseña</string>
    <string name="txtviewRegistrarConfirmarPassword">Confirmar contraseña</string>

    <string name="txtviewRegistrarHuella">Establecer Huella</string>
    <string name="txtviewRegistrarFacial">Establecer Rec.Facial</string>
    <string name="btnRegistrarCrear">Crear cuenta</string>
    <string name="txtviewCuentaCreada">Ya tengo una cuenta</string>

    <!--Kency Angely -->
    <string name="TienesProblemasParaIniciarSesion">¿Tienes problemas para iniciar sesión?</string>
    <string name="ENVIARCODIGO">Enviar código</string>
    <string name="LabelTienesProblemasParaIniciarSesion">Para obtener un código de verificación, primero debes confirmar el correo electrónico que has añadido a tu cuenta</string>


    <string name="CrearCuenta">Crear cuenta</string>
    <string name="IngresarCodigo">Ingrese el código de verificacíon</string>
    <string name="LinkEnviarDeNuevo">Enviar de nuevo</string>
    <string name="Regístrate">Regístrate</string>

    <string name="RecuperarContra">Recuperar contraseña</string>
    <string name="RestaurarContra">Restaurar contraseña</string>

    <string name="LabelRecuperarContra">Hemos enviado un código de verificación a tu dirección de correo. Por favor, introduce esta secuencia de números en la siguiente casilla de verificación.</string>
    <string name="LinkEnviarDeNuevo2">Enviar de nuevo</string>
    <string name="VerificarCodigo">Verificar</string>

    <string name="ingresar">Ingresar</string>
    <string name="unirse">Unirse</string>
    <string name="No">Nada</string>
    <string name="Regístrarse">Regístrarse</string>
    <string name="Atras">Atras</string>

    <string name="ingreseNuevaContrasena">Ingrese una nueva contraseña</string>
    <string name="confirmaContrasena">Confirme su contraseña</string>
    <string name="nombreUsuario">Nombre del usuario</string>
    <string name="BuscarGrupo">Buscar usuario</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="atras">Atrás</string>
    <string name="siguiente">Siguiente</string>
    <string name="appName">Music Store HN</string>
    <string name="NuevoGrupo">Nuevo Grupo</string>
    <string name="actualizar">Actualizar</string>
    <string name="creador">Creado por</string>
    <string name="integrantes">Integrantes</string>
    <string name="grupos">Grupos</string>
    <string name="inicio">Inicio</string>
    <string name="usuarios">Usuarios</string>
    <string name="buscar">Buscar</string>
    <string name="multimedia">Multimedia</string>
    <string name="ajustes">Ajustes</string>
    <string name="acercade">Acerca de</string>
    <string name="resultBusqueda">Resultado de la búsqueda</string>
    <string name="descripcion">Descripción:</string>
    <string name="agregar_integrantes">Agregar Integrantes</string>
    <string name="buscar_nombreUsuario">Buscar por nombre de usuario</string>
    <string name="ingrese_nombreGrupo">Nombre del grupo</string>
    <string name="ingrese_descripcion">Descripción</string>
    <string name="crearGrupo">Crear Grupo</string>
    <string name="integrante">Integrante</string>
    <string name="musica">Musica</string>
    <string name="video">Video</string>
    <string name="verTodo">Vertodo</string>
    <string name="tituloConometro">Por favor, espera a que el tiempo finalice para poder solicitar un nuevo código.</string>
    <string name="identificate">Identifícate</string>

</resources>