<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activity_codigoverificacion_crearcuenta">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Encabezado con el botón Atrás -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btnAtras"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/iconoatras"
                    android:contentDescription="@string/Atras"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Atras"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            </LinearLayout>

            <!-- Contenido principal -->
            <Space
                android:layout_width="match_parent"
                android:layout_height="70dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/TienesProblemasParaIniciarSesion"
                android:textColor="#D3D3D3"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="256dp"
                android:layout_gravity="center"
                android:src="@drawable/iconorecuperarcontrasena" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="40dp">

                <TextView
                    android:id="@+id/ingreseContrsenaActual"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/LabelTienesProblemasParaIniciarSesion"
                    android:textColor="#D3D3D3"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/txtRecuperarEnviar"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/edittext"
                    android:inputType="textPassword"
                    android:labelFor="@id/ingreseContrsenaActual"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="134dp" />

                <Button
                    android:id="@+id/BtnRecuperarEnviar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/button"
                    android:text="@string/ENVIARCODIGO"
                    android:textColor="@color/white"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
