<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_login"
    android:background="@drawable/fondodetodaslaspantallas">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!---->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="112dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@drawable/logoiniciosesion">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/fuente_jost_global"
                android:text="@string/login"
                android:layout_marginTop="10dp"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold">
            </TextView>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="278dp"
                android:layout_height="157dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

                <!---Nombre de Usuario-->
                <TextView
                    android:id="@+id/txtviewRegistrarNombres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fuente_jost_global"
                    android:textStyle="bold"
                    android:text="@string/textviewLoginUsuario"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/txtRegistrarNombres"
                    android:layout_width="match_parent"
                    android:layout_height="39dp"
                    android:layout_marginTop="7dp"
                    android:background="@color/white">

                </EditText>

                <!---Password-->
                <TextView
                    android:id="@+id/txtviewLoginPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:text="@string/textviewLoginPassword"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:fontFamily="@font/fuente_jost_global"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/txtLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="39dp"
                    android:layout_marginTop="7dp"
                    android:background="@color/white"
                    android:inputType="text|textPassword"></EditText>
            </LinearLayout>

            <!---Área de checkbox y enlace-->

            <!---Área de datos bimetricos-->

            <!---Área de botones-->

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="278dp"
                android:layout_height="47dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingLeft="-10dp">

                <!---Checkbox-->
                <CheckBox
                    android:id="@+id/checkLoginRecordar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:checked="true"
                    android:text="@string/checkLoginRecordar"
                    android:textColor="#FFFDFD"
                    android:textColorHighlight="#FFFFFF"
                    android:textColorLink="#FFFCFC"
                    android:textSize="13sp"
                    android:fontFamily="@font/fuente_jost_global"
                    android:textStyle="bold">
                </CheckBox>

                <!---¿Olvido su contraseña?-->
                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:text="@string/txtviewOlvidaPassword"
                    android:textColor="#FFFDFD"
                    android:textSize="13sp"
                    android:fontFamily="@font/fuente_jost_global"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="278dp"
                android:layout_height="47dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <!--Huella Digital-->
                <ImageButton
                    android:id="@+id/btnRegistrarHuella"
                    android:layout_width="39dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/huella" />

                <!--Texto del botón de huella digital-->
                <TextView
                    android:id="@+id/txtviewRegistrarFacial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingTop="13dp"
                    android:text="Huella"
                    android:fontFamily="@font/fuente_jost_global"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:textSize="15dp"></TextView>

                <!--Reconocimiento Facial-->
                <ImageButton
                    android:id="@+id/btnRegistrarFacial"
                    android:layout_width="37dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="35dp"
                    android:background="@drawable/reconocimiento"></ImageButton>

                <!--Texto del botón de Reconocimiento Facial-->
                <TextView
                    android:id="@+id/txtviewLoginFacial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingTop="13dp"
                    android:text="Rec.Facial"
                    android:fontFamily="@font/fuente_jost_global"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:textSize="15dp"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="278dp"
                android:layout_height="47dp"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                android:orientation="horizontal">

                <!---Boton de loguiarse-->
                <Button
                    android:id="@+id/btnLoginEntrar"
                    android:layout_width="115dp"
                    android:layout_height="33dp"
                    android:background="@color/button"
                    android:paddingTop="-5dp"
                    android:text="@string/btnLoginEntrar"
                    android:fontFamily="@font/fuente_jost_global"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    tools:ignore="TextContrastCheck,VisualLintButtonSize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="o"
                    android:textColor="#FFFFFF"></TextView>

                <!---Boton de crear una cuenta-->
                <Button
                    android:id="@+id/btnRegistrarCrear"
                    android:layout_width="136dp"
                    android:layout_height="33dp"
                    android:layout_marginStart="10dp"
                    android:background="@color/white"
                    android:paddingTop="-7dp"
                    android:text="@string/btnLoginRegistrarse"
                    android:fontFamily="@font/fuente_jost_global"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    tools:ignore="TextContrastCheck,VisualLintButtonSize" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>